Fix selectbox overflow

--- a/software-releases-helper-react/src/inputs/FreeSelectInput.css
+++ b/software-releases-helper-react/src/inputs/FreeSelectInput.css
@@ -51,6 +51,8 @@
 
 .free-select-input-options-container {
 	width: 100%;
+	overflow: auto;
+	max-height: 200px;
 }
 
 .free-select-input-options {
